--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "flowbite": "^3.1.2"
+    }
 }
